--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "ECHO is on.",
   "main": "index.js",
   "scripts": {
+    "bootup": "tsx --watch src/adapter/in/server/main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
