--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ECHO is on.",
   "main": "index.js",
   "scripts": {
-    "bootup": "tsx --watch src/adapter/in/server/main.ts",
+    "botup": "tsx --watch src/adapter/in/server/main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
