feat(add): send things

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
-PORT=3000
+PORTDOCKER=3000
+PORTDEV=3003
+
+# DATABASE_URL="postgresql://travel:travel@localhost:5432/travelbot?schema=public"
+
+DATABASE_URL="file:../db/dev.db"
