--- a/package.json
+++ b/package.json
@@ -1,23 +1,28 @@
 {
-  "name": "travel_boot",
+  "name": "travel_bot",
   "version": "1.0.0",
-  "description": "ECHO is on.",
+  "description": "Travel Schedule bot",
   "main": "index.js",
   "scripts": {
-    "botup": "tsx --watch src/adapter/in/server/main.ts",
+    "botup": "tsx --watch src/main.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.1.0",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.5",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "prisma": "^6.1.0",
     "tsx": "^4.19.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "ts-node": "^10.9.2"
+  },
+  "devDependencies": {
   }
 }
